--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,10 @@
 @theme {
   --font-main: "JetBrains Mono", system-ui;
 
-  --color-dark: #242424;
-  --color-nav: #101010;
-  --color-contact: #202020;
-  --color-card: #171717;
+  --color-dark: #191919;
+  --color-nav: #0c0c0c;
+  --color-hero: #121212;
+  --color-contact: #161616;
   --color-secondary: #c5c5c5;
   --color-blue: #5badff;
 
