style: change navbar color

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
   --font-main: "JetBrains Mono", system-ui;
 
   --color-dark: #191919;
-  --color-nav: #111111;
+  --color-nav: #0c0c0c;
   --color-hero: #121212;
   --color-contact: #161616;
   --color-secondary: #c5c5c5;
