--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap");
 
 @import "tailwindcss";
 
 @theme {
   --font-main: "Roboto", system-ui;
+  --font-oswald: "Oswald", system-ui;
   --animate-fadein: fade linear 1s;
   --shadow-dark: rgba(149, 157, 165, 0.1) 0px 8px 24px;
 }
