--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,40 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap");
 
 @import "tailwindcss";
 
+@font-face {
+  font-family: "General Sans";
+  src: url(./assets/fonts/GeneralSans-Medium.woff2);
+  font-weight: 500;
+  font-display: swap;
+}
+@font-face {
+  font-family: "General Sans";
+  src: url(./assets/fonts/GeneralSans-Bold.woff2);
+  font-weight: 700;
+  font-display: swap;
+}
+@font-face {
+  font-family: "General Sans";
+  src: url(./assets/fonts/GeneralSans-Regular.woff2);
+  font-weight: 400;
+  font-display: swap;
+}
+@font-face {
+  font-family: "General Sans";
+  src: url(./assets/fonts/GeneralSans-Semibold.woff2);
+  font-weight: 600;
+  font-display: swap;
+}
+@font-face {
+  font-family: "General Sans";
+  src: url(./assets/fonts/GeneralSans-Light.woff2);
+  font-weight: 300;
+  font-display: swap;
+}
+
 @theme {
-  --font-main: "Roboto", system-ui;
+  --font-main: "General Sans", system-ui;
   --font-oswald: "Oswald", system-ui;
   --animate-fadein: fade linear 1s;
   --shadow-dark: rgba(149, 157, 165, 0.1) 0px 8px 24px;
